added organization key in the properites file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.verbose=true
-sonar.organization=satiz
+sonar.organization=satiz-key
 sonar.projectKey=satiz-key_trend-job 
 sonar.projectName=trend-job-
 sonar.language=java
